Fix warnings found by compiling with -Wc99-designator and -Wreorder-init-list https://bugs.webkit.org/show_bug.cgi?id=267203 <rdar://120609492>

Reviewed by Mike Wyrzykowski.

Every fix below is related to using designated initializers, and
initializing member fields in the same order that they are defined.  In
two cases, a struct inherits from another struct, and the designated
initializer syntax can't be used to initialize members in the base
struct, so IGNORE_WARNINGS_BEGIN/END is used instead.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUDeviceImpl.cpp:
(WebCore::WebGPU::DeviceImpl::importExternalTexture):
(WebCore::WebGPU::DeviceImpl::createBindGroup):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateLastPixelBuffer):
* Source/WebCore/platform/graphics/cocoa/AudioTrackPrivateWebM.cpp:
(WebCore::AudioTrackPrivateWebM::updateConfiguration):
- Use IGNORE_WARNINGS_BEGIN("c99-designator")/IGNORE_WARNINGS_END to
  suppress the -Wc99-designator warning.
* Source/WebCore/platform/graphics/cocoa/VideoTrackPrivateWebM.cpp:
(WebCore::VideoTrackPrivateWebM::updateConfiguration):
- Ditto.
* Source/WebKit/Shared/mac/MediaFormatReader/MediaSampleCursor.h:
(WebKit::MediaSampleCursor::wrapperClass):

Canonical link: https://commits.webkit.org/272764@main